sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:8: error: not found: value j
      if (!plusPetit(i, j)){
                        ^AlgCocktailSort2:9: error: not found: value j
        echange(i, j)
                   ^AlgCocktailSort2:12: error: reassignment to val
      fin = fin -1
          ^AlgCocktailSort2:15: error: not found: value j
      if (!plusPetit(i, j)){
                        ^AlgCocktailSort2:16: error: not found: value j
        echange(i, j)
                   ^