sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var s = true
  var debut = 0
  val fin = getNombreValeurs()
  do{
    for (i<- debut to fin){
      if (!plusPetit(i, j)){
        echange(i, j)
        s=false
      }
      fin = fin -1
    }
    for (i<- fin to debut by -1){
      if (!plusPetit(i, j)){
        echange(i, j)
        s=false
      }
      debut = debut +1
    }
  }while (!s)
}